🔧 Fix scrollbar
Fix horizontal scrollbar for desktop and mobile navigation

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -14,6 +14,7 @@
 /* ===== Smooth Scroll === */
 html{
     scroll-behavior: smooth;
+    overflow: auto;
 }
 @media screen and (prefers-reduced-motion: reduce) {
 	html {
